# allolithe

./: .gitignore  CMakeLists.txt  changelist.txt
allolithe/: al_Atlas.hpp  al_Exceptions.hpp  al_Module.hpp  al_ModuleGUI.hpp  al_PatcherGUI.hpp  al_PatcherGUIComponents.hpp  al_SinkModule.hpp  al_SoundEngine.hpp  al_allolithe.hpp
doc/: CMakeLists.txt  Doxyfile
examples/: CMakeLists.txt
examples/litheModularApp/: CMakeLists.txt  DummyModule.hpp  MockSoundEngine.hpp  RunStopButton.hpp  al_PatcherGUI.hpp  main.cpp
examples/litheModularApp/include/: Oscillator.hpp  RunStopButton.hpp  al_PatcherGUI.hpp  al_StereoSink.hpp  al_StereoSinkGUI.hpp  include_modules.hpp
examples/litheModularApp/modules/: OscillatorGUI.hpp  al_StereoSink.hpp
examples/litheModularApp/src/: al_PatcherGUI.cpp  test.cpp
examples/simpleOscillatorApp/: CMakeLists.txt  main.cpp
examples/simpleOscillatorApp/include/: Oscillator.hpp  SimpleOscillatorApp.hpp  StereoSink.hpp
src/: al_Atlas.cpp  al_Exceptions.cpp  al_Module.cpp  al_ModuleGUI.cpp  al_PatcherGUI.cpp  al_PatcherGUIComponents.cpp  al_SinkModule.cpp  al_SoundEngine.cpp
test/: CMakeLists.txt
test/testAtlas/: CMakeLists.txt  testAtlas.cpp  testAtlas.h
test/testModule/: CMakeLists.txt  ModuleOne.h  testModule.cpp  testModule.h
test/testSinkModule/: CMakeLists.txt  ModuleEffect.hpp  ModuleSink.hpp  ModuleSource.hpp  SinkModuleOne.h  testSinkModule.cpp  testSinkModule.h
test/testSoundEngine/: CMakeLists.txt  DummySink.hpp  MockModule.hpp  ModuleOne.hpp  ModuleTwo.hpp  PatchingTestModules.hpp  SinkOne.hpp  SinkTwo.hpp  testSoundEngine.cpp  testSoundEngine.h
test/testTemplate/: CMakeLists.txt  testTemplate.cpp  testTemplate.h
